@@ -35,6 +35,7 @@ module Gem
       register_command ListCommand.new
       register_command SearchCommand.new
       register_command UpdateCommand.new
+      register_command RDocCommand.new
       register_command EnvironmentCommand.new
       register_command SpecificationCommand.new
       register_command UnpackCommand.new
